# HasegawaMima

./: HasegawaMima.code-workspace  README.md
C/: CMakeLists.txt  build.sh
C/HM/: CMakeLists.txt
C/HM/HasegawaMima/: Definitions.hpp  Model.cpp
C/HM_C/: main.cpp
C/HM_C/HasegawaMima/: Definitions.hpp  Model.cpp
HasegawaMima/C/: CMakeLists.txt
HasegawaMima/C/HM_C/: CMakeLists.txt
HasegawaMima/C/HM_C/HasegawaMima/: Definitions.hpp  Model.hpp
Python/: hm.py  hmETG.py  readOutput.py
